RESTCallout/src/objects/Integration_Input__c.object
<CustomObject>
    <label>Integration Input</label>
    <nameField>
        <label>Integration Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Field_Conversion_Custom__c</fullName>
        <label>Field Conversion Custom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Conversion__c</fullName>
        <label>Field Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Integration_Conversion_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Integration_Field_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Value__c</fullName>
        <label>Fixed Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Definition__c</fullName>
        <label>Integration Definition</label>
        <referenceTo>Integration_Definition__c</referenceTo>
        <relationshipLabel>Integration Inputs</relationshipLabel>
        <relationshipName>Integration_Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Body</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>URI</fullName>
                </value>
                <value>
                    <fullName>Query Parameter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Custom_Field_Conversion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsPickVal(Field_Conversion__c,'Custom'), Len(Field_Conversion_Custom__c) = 0)</errorConditionFormula>
        <errorMessage>If you select Custom for the FIeld Conversion then you need to enter the name of the class that does the conversion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Fixed_then_Fixed_Value_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Fixed__c = true, Len(Fixed_Value__c) = 0)</errorConditionFormula>
        <errorMessage>When the fixed checkbox is checked you need to enter a value for the fixed value.</errorMessage>
    </validationRules>
</CustomObject>